--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -2,50 +2,50 @@
 
 function launch_seqview(dsid, chr)
  {
-   start = kaj.GS('start');
-   stop = kaj.GS('stop');
+   start = $('#start').val();
+   stop = $('#stop').val();
    window.open("SeqView.pl?dsid="+dsid+"&chr="+chr+"&start="+start+"&stop="+stop);
  }
 
 function dataset_chain(val) {
- if (val) {kaj.GS('org_list', val);}
- kaj.GS('ds_list','<input type=hidden id = "ds_id"><font class="loading. . ."></font>');
- kaj.GS('ds_info','<input type=hidden id = "chr">');
- kaj.GS('chr_info','<input type=hidden id = "ds_id">');
+ if (val) {$('#org_list').html(val);}
+ $('#ds_list').html('<input type=hidden id = "ds_id"><font class="loading. . ."></font>');
+ $('#ds_info').html('<input type=hidden id = "chr">');
+ $('#chr_info').html('<input type=hidden id = "ds_id">');
  get_dataset(['org_id'],[dataset_info_chain]);
 }
 
 function dataset_info_chain(val) {
- kaj.GS('chr_info','<font class="loading"></font>');
- kaj.GS('ds_info','<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
- kaj.GS('viewer','<font class="loading"></font>');
- kaj.GS('get_seq','');
- if (val) {kaj.GS('ds_list', val);}
+ $('#chr_info').html('<font class="loading"></font>');
+ $('#ds_info').html('<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
+ $('#viewer').html('<font class="loading"></font>');
+ $('#get_seq').empty();
+ if (val) {$('#ds_list').html(val);}
  get_dataset_info(['ds_id'],[dataset_info_chr_chain]);
 }
 
 function dataset_info_chr_chain(val) {
- kaj.GS('chr_info','<input type=hidden id = "ds_id"><font class="loading">loading. . .</font>');
- kaj.GS('ds_info','<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
- kaj.GS('viewer','<font class="loading"></font>');
- kaj.GS('get_seq','');
- if (val) {kaj.GS('ds_info', val); kaj.GS('chr_info','<font class="loading">searching for features. . .</font>');}
+ $('#chr_info').html('<input type=hidden id = "ds_id"><font class="loading">loading. . .</font>');
+ $('#ds_info').html('<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
+ $('#viewer').html('<font class="loading"></font>');
+ $('#get_seq').empty();
+ if (val) {$('#ds_info').html(val); $('#chr_info').html('<font class="loading">searching for features. . .</font>');}
  get_dataset_chr_info(['ds_id', 'chr'],['chr_info', 'viewer', 'get_seq']);
 }
 
 function get_organism_name_chain(val)
 {
- kaj.GS('org_list', '<input type=hidden id = "org_id"><font class="loading"></font>');
- kaj.GS('ds_list','<input type=hidden id = "ds_id">');
- kaj.GS('chr_info','');
- kaj.GS('ds_info','<input type=hidden id = "chr">');
- kaj.GS('viewer','');
+ $('#org_list').html('<input type=hidden id = "org_id"><font class="loading"></font>');
+ $('#ds_list').html('<input type=hidden id = "ds_id">');
+ $('#chr_info').empty();
+ $('#ds_info').html('<input type=hidden id = "chr">');
+ $('#viewer').empty();
  get_orgs(['args__'+val], [dataset_chain]);	 
 }
 
 function launch_viewer (dsd, chr) {
- x = kaj.G('x');
- z = kaj.G('z');
+ x = $('#x').val();
+ z = $('#z').val();
  if (z > 12) {z=12;}
  link =  "GenomeView.pl?z="+z+"&x="+x+"&ds="+dsd+"&chr="+chr;
  window.location=link;
