--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -50,7 +50,7 @@ function show_anno (anno)
  {
  $('#anno').hide(); 
  $('#anno').html(anno);
- $('#anno').slideDown("slow"); 
+ $('#anno').slideDown(pageObj.speed); 
  }
 
 </SCRIPT>
