--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -1,7 +1,5 @@
 
-
-<TMPL_IF NAME=SEQVIEW_JAVA>
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.js"></SCRIPT>
+<TMPL_IF NAME="JS">
 <SCRIPT language="JavaScript">
 
 $(document).ready(function(){
@@ -9,12 +7,27 @@ if (document.images) {
 //Preload Button Images
 
 }
-$('#hide_annotation_button').hide();
-$('.button1').hide(0);
+//$('#hide_annotation_button').hide();
+//$('#dna_button').hide(0);
 $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300px; width: auto;"></DIV>');
-$('#feat_annos').toggle(0);
+//$('#feat_annos').toggle(0);
+  var featid = <TMPL_VAR NAME=FEATID>;
+  if (featid){
+  myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=CHR>,featid,'<TMPL_VAR NAME=FEATNAME>');}
+  else{
+  myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=CHR>);}
+  get_sequence();
 });
 
+
+function generate_seq_obj(dsid,chr,featid,featname){
+  this.featid=featid;
+  this.dsid=dsid;
+  this.start=$('#upstream').val();
+  this.stop=$('#downstream').val();
+  this.chr=chr;
+  this.featname=featname;
+}
 
 function reset_updown() {
   $('#upstream').val(0);
@@ -24,22 +37,23 @@ function reset_updown() {
 function dynamic_buttons(button){
  //alert(button);
  $('.seqview_button').hide(0);
- if (button == "button1"){
-   $('.button2').show(0);
-   $('.button3').show(0);}
- else if (button == "button2"){
-   $('.button1').show(0);
-   $('.button3').show(0);}
+ if (button == "dna_button"){
+   $('#rc_button').show(0);
+   $('#pro_button').show(0);}
+ else if (button == "rc_button"){
+   $('#dna_button').show(0);
+   $('#pro_button').show(0);}
  else{
-  $('.button1').show(0);
-  $('.button2').show(0);
+  $('#dna_button').show(0);
+  $('#rc_button').show(0);
   }
 }
 
-function get_sequence(html){
-  $('#seq').hide(0);
-  $('#seq').html(html);
-  $('#seq').show();
+function onEnter(e){
+  if (!e){ 
+   var e = window.event;}
+  if(e.which == 13){
+    redefine();}
 }
 
 function get_blast_info(){
@@ -47,23 +61,45 @@ function get_blast_info(){
   parse_url(['args__url','args__'+url],[blastSeq]);
 }
 
-function blastSeq(dsid,chr,rc,featid,featname) {
+function blastSeq() {
+ dsid = myObj.dsid;
+ chr=myObj.chr;
+ featid=myObj.featid;
  up = $('#upstream').val() || 0;
  down = $('#downstream').val() || 0;
  rc = 0;
- if ($('.button2').is(':hidden')==true){
+ if ($('.rc_button').is(':hidden')==true){
    rc = 1;}
  if (featid) {
  //alert('CoGeBlast.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&featname='+featname+'&rc='+rc);
- window.open('CoGeBlast.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&featname='+featname+'&rc='+rc);}
+ window.open('CoGeBlast.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&rc='+rc);}
  else {
  //alert('CoGeBlast.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid,'window');
  window.open('CoGeBlast.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&rc='+rc,'window');
  }
 }
 
-function waiting() {
-  $('#annotation').html('<font class="loading">Loading Features . . .</font>');
+function waiting(tag,rc) {
+  var seq_length;
+  if (typeof rc == 'undefined'){
+    rc = myObj.rc || 0;}
+  if(myObj.featid){
+      seq_length = ((myObj.stop)*1 - (myObj.start)*1);}
+  else{
+      seq_length = ((myObj.stop)*1 + (myObj.start)*1);}
+  //else{
+  //html = html.replace(/<.+>/g,"");
+  //html = html.replace(/<\/pre>$/,"");
+    //seq_length = html.length;}
+  //alert(seq_length);
+  if ((rc==2)&&(seq_length > 80000)){
+     $('#'+tag).html('<font class="loading dna">Loading. . .</font>');}
+  else if (seq_length > 400000){
+  //alert(html+' is '+seq_length+' chars long'); 
+  //if (
+    $('#'+tag).html('<font class="loading dna">Loading. . .</font>');}
+  else{
+    return;}
 }
 
 function get_feats(){
@@ -73,34 +109,69 @@ $('#annotation_button').toggle(0);
 var hidden = $('#feat_annos').is(':hidden');
 if (hidden == true){
  return;}
-waiting();
+waiting('annotation');
 }
 
 function make_focus() {
   document.nt_stream.upstream.focus();
 }
 
+function redefine(){
+  myObj.start=$('#upstream').val();
+  myObj.stop=$('#downstream').val();
+  get_sequence(myObj.rc,myObj.pro,1);
+}
+
+function get_sequence(rc,pro,add){
+  waiting('seq_text',rc);
+  if (typeof pro == 'undefined'){
+  pro=myObj.pro || 0;}
+  else{
+  myObj.pro=pro;}
+  if (typeof rc == 'undefined'){
+  rc = myObj.rc || 0;}
+  else{
+  myObj.rc=rc;}
+  //alert(rc);
+  get_seq(['args__featid', 'args__'+myObj.featid, 'args__pro', 'args__'+pro, 'args__rc', 'args__'+rc, 'args__chr', 'args__'+myObj.chr, 'args__dsid', 'args__'+myObj.dsid, 'args__featname', 'args__'+myObj.featname, 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__'+myObj.start,'args__stop', 'args__'+myObj.stop,'args__add', 'args__'+add],['seq_text']);
+  //alert($('#seq_text').html());
+}
+
 </SCRIPT>
+</TMPL_IF>
+<TMPL_IF NAME=SEQ_BOX>
+     <DIV id="seq" style="height: 300px; overflow: auto;">
+      <TABLE>
+       <TR>
+        <TD>
+        <DIV id="seq_text" class="seq_text"></DIV>
+	</TD>
+       </TR>
+      </TABLE>
+ </div>
 </TMPL_IF>
 <TMPL_IF NAME=BOTTOM_BUTTONS>
   <DIV id="dynamic_button">
   <TABLE>
    <TR>
-      <TMPL_LOOP NAME="BUTTON_LOOP">
-      
       <TD align=right valign="top">
-      <DIV class="seqview_button button<TMPL_VAR NAME=BUTTON_NUM_CLASS>" id="button<TMPL_VAR NAME=BUTTON_NUM_ID>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="dynamic_buttons('button<TMPL_VAR NAME=BUTTON_NUM>');get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],[get_sequence]);gen_title(['args__rc', 'args__<TMPL_VAR NAME=TITLE_RC>', 'args__pro', 'args__<TMPL_VAR NAME=TITLE_PRO>'],['box_name']);make_focus();"></DIV>
+       <DIV class="seqview_button dna_button>" style="display: none" id="dna_button"><input type=button value="DNA Sequence" onClick="dynamic_buttons('dna_button');get_sequence(0,0);gen_title(['args__0','args__0'],['box_name']);make_focus();"></DIV>     
+      </TD>
+      <TD align=right valign="top">
+      <DIV class="seqview_button rc_button>" id="rc_button"><input type=button value="Reverse Complement" onClick="dynamic_buttons('rc_button');get_sequence(1,0);gen_title(['args__1','args__0'],['box_name']);make_focus();"></DIV>
+      </TD>
+      <TD align=right valign="top">
+         <DIV class="seqview_button pro_button>" id="pro_button"><input type=button value="<TMPL_VAR NAME=PROTEIN>" onClick="dynamic_buttons('pro_button');get_sequence(<TMPL_VAR NAME=PRO_RC>,<TMPL_VAR NAME=PRO_PRO>);gen_title(['args__<TMPL_VAR NAME=PRO_RC>','args__<TMPL_VAR NAME=PRO_PRO>'],['box_name']);make_focus();"></DIV>
       </TD>
       <!--get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],[get_sequence]);gen_title(['args__rc', 'args__<TMPL_VAR NAME=TITLE_RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);-->
-      </TMPL_LOOP>
      <TMPL_IF NAME=FIND_FEATS>
      <TD align=right valign="top">
-     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="get_feats();find_feats(['args__start', 'args__<TMPL_VAR NAME=FEAT_START>', 'args__stop', 'args__<TMPL_VAR NAME=FEAT_STOP>', 'args__chr', 'args__<TMPL_VAR NAME=FEAT_CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=FEAT_DSID>'],['annotation']);"></DIV>
-     <DIV id="hide_annotation_button"> <input type=button value="Hide Features" onClick="get_feats();"></DIV>
+     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="get_feats();find_feats(['args__start', 'upstream', 'args__stop', 'downstream', 'args__chr', 'args__'+myObj.chr, 'args__dsid', 'args__'+myObj.dsid],['annotation']);"></DIV>
+     <DIV id="hide_annotation_button" style="display: none"> <input type=button value="Hide Features" onClick="get_feats();"></DIV>
      </TMPL_IF>
      </TD>
      <TD align=right valign="top">
-     <DIV id="blast_button"><input type=button value="Blast Sequence" onClick="get_blast_info()"></DIV>
+     <DIV id="blast_button"><input type=button value="Blast Sequence" onClick="blastSeq()"></DIV>
     </TD>
    </TR>
   </TABLE>
@@ -109,7 +180,7 @@ function make_focus() {
 </TMPL_IF>
 
 <TMPL_IF NAME="ADDITION">
-<DIV id="feat_annos">
+<DIV id="feat_annos" style="display: none">
 <TABLE>
  <TR>
   <TD>
@@ -125,8 +196,8 @@ function make_focus() {
  <TR> 
   <TD align = left valign = "middle">
    <form id="nt_stream" name="nt_stream">
-   <TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream"  class="backbox" value= "<TMPL_VAR NAME="UPVALUE">">
-   <TMPL_VAR NAME="DOWNSTREAM"><INPUT type="text" id="downstream" class="backbox" value= "<TMPL_VAR NAME="DOWNVALUE">">
+   <TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream"  onkeypress="onEnter(event);" class="backbox" value= "<TMPL_VAR NAME="UPVALUE">">
+   <TMPL_VAR NAME="DOWNSTREAM"><INPUT type="text" id="downstream" onkeypress="onEnter(event);" class="backbox" value= "<TMPL_VAR NAME="DOWNVALUE">">
    </form>
   </TD>
   </TR>
@@ -135,20 +206,21 @@ function make_focus() {
 
   <TR>
    <TD align = left valign = "middle">
-   <input type = button value = "Reset" id="reset" onClick="reset_updown();get_seq(['args__featid', 'args__<TMPL_VAR NAME=RESET_FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])">
+   <input type = button value = "Reset" id="reset" onClick="reset_updown();get_sequence();">
    <!--<input type=button value="Select Sequence" id="select" onClick="selectText()">-->
-      <input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=ADD_FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
+      <input type= button value ="Add to Sequence" id = "add_to" onClick="redefine();"> 
    </TMPL_IF>
-  </TR>
    <TMPL_IF NAME="RANGE">
 
     <TR>
      <TD>
-      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq_and_button(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream', 'args__add', 'args__1'],['seq','buttons','add_more'])"> 
+      <input type= button value ="Redefine Sequence" id = "add_to" onClick="redefine();"> 
    </TMPL_IF>
+
+<TMPL_IF NAME="REST">
    </TR>
  </TABLE>
-
+</TMPL_IF>
 
 <TMPL_IF NAME="FEATUREBOX">
  <TABLE>
