--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -570,6 +570,15 @@ tr.ltblue {
 
 }
 
+.resultborder
+{
+  border-bottom: 1px solid #00FF35;
+  border-left: 1px solid #00FF35;
+  border-right: 1px solid #00FF35;
+  border-top: 1px solid #00FF35;
+
+}
+
 .blue {
     color:blue;
     size:13px;
@@ -589,12 +598,12 @@ tr.ltblue {
 
 #carousel
 {
-	width: 1100px;
+	width: 1000px;
 	height: 225px;
 	/*position: absolute;*/
 	background-image: url(/CoGe/picts/animations/DNA_orbit_animated_small-side.gif);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
 	/*top: 200px;
 	left: 100px;*/
 }
@@ -603,4 +612,11 @@ tr.ltblue {
 {
 	position: absolute;
 	width: 227px;
+}
+
+.carousel_background
+{
+	background-image: url(/CoGe/picts/carousel/carousel-background.png);
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
 }
