--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -1,20 +1,20 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
  <tr> 
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
+  <td width="6"  class="boxarttop">&nbsp;</td>
+  <td width="100%"  class="boxarttop"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
+  <td width="6" class="boxarttop">&nbsp;</td>
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
  </tr>
  <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
+  <td height="9" valign="top" class="boxartleft"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
   <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tl.png" width="6" height="9"></td>
   <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_t.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
   <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tr.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
+  <td height="9" valign="top" width="6" class="boxartright"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
  </tr>
  <tr>
-  <td background="/CoGe/picts/table/table_bg_head_l.png">&nbsp;</td>
+  <td class="boxartleft">&nbsp;</td>
   <td background="/CoGe/picts/table/table_bg_body_l.png">&nbsp;</td>
   <td> 
 <!-- ########################################## -->
@@ -27,19 +27,19 @@
 
  </td>
   <td  background="/CoGe/picts/table/table_bg_body_r.png">&nbsp;</td>
-  <td  background="/CoGe/picts/table/table_bg_head_r.png">&nbsp;</td>
+  <td  class="boxartright">&nbsp;</td>
  </tr>
  <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
+  <td height="9" valign="top" class="boxartleft"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
   <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_bl.png" width="6" height="9"></td>
   <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
   <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_br.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
+  <td height="9" valign="top" width="6" class="boxartright"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
  </tr>
  <tr> 
   <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_bl.png" width="6" height="9"></td>
   <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom" background="/CoGe/picts/table/table_bg_head_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
+  <td height="9" valign="bottom" class="boxartbottom"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
   <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
   <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_br.png" width="6" height="9"></td>
  </tr>
